:bug: foot spacing bug

--- a/src/_assets/scss/common/_global.scss
+++ b/src/_assets/scss/common/_global.scss
@@ -93,10 +93,6 @@ img {
   @extend .flex-grow-1, .justify-content-between;
 }
 
-.content-info {
-  @extend .mt-auto;
-}
-
 .logo {
   //height: $logo-height;
 }
